[gd_scene load_steps=9 format=2]

[ext_resource path="res://UserInterfaceElements/defaultTheme.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/Menu/PlayerList.gd" type="Script" id=2]
[ext_resource path="res://assets/uipack/PNG/blue_button01.png" type="Texture" id=3]
[ext_resource path="res://assets/uipack/PNG/blue_button00.png" type="Texture" id=4]
[ext_resource path="res://assets/uipack/PNG/green_button00.png" type="Texture" id=5]
[ext_resource path="res://assets/uipack/PNG/red_button00.png" type="Texture" id=6]
[ext_resource path="res://assets/uipack/PNG/green_button01.png" type="Texture" id=7]
[ext_resource path="res://assets/uipack/PNG/red_button01.png" type="Texture" id=8]

[node name="PlayerList" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.0
color = Color( 0.2, 0.211765, 0.270588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NavBar" type="ColorRect" parent="."]
anchor_right = 1.0
margin_bottom = 73.0
color = Color( 0.388235, 0.454902, 0.886275, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="NavBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_right = -20.0
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameLabel" type="Label" parent="NavBar/HBoxContainer"]
margin_top = 27.0
margin_right = 121.0
margin_bottom = 45.0
text = "logged in as: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -186.5
margin_top = -141.5
margin_right = 186.5
margin_bottom = 141.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="MainContainer"]
margin_right = 373.0
margin_bottom = 18.0
text = "Choose a player to play with"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MainContainer"]
margin_top = 22.0
margin_right = 373.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 20 )

[node name="AvailablePlayers" type="ItemList" parent="MainContainer"]
margin_left = 61.0
margin_top = 46.0
margin_right = 311.0
margin_bottom = 206.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 4
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="MainContainer"]
margin_top = 210.0
margin_right = 373.0
margin_bottom = 230.0
rect_min_size = Vector2( 0, 20 )

[node name="InviteButton" type="TextureButton" parent="MainContainer"]
margin_left = 91.0
margin_top = 234.0
margin_right = 281.0
margin_bottom = 283.0
size_flags_horizontal = 4
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MainContainer/InviteButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.24866
margin_right = 2.24866
text = "invite"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -148.0
margin_top = -94.5
margin_right = 148.0
margin_bottom = 94.5
theme = ExtResource( 1 )
window_title = "Error"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InvitationDialog" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -208.0
margin_top = -81.0
margin_right = 208.0
margin_bottom = 81.0
window_title = "Invitation"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InvitationButttons" type="HBoxContainer" parent="InvitationDialog"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -49.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptInviteButton" type="TextureButton" parent="InvitationDialog/InvitationButttons"]
margin_left = 16.0
margin_right = 206.0
margin_bottom = 49.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="InvitationDialog/InvitationButttons/AcceptInviteButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "accept"
align = 1
valign = 1

[node name="RejectInviteButton" type="TextureButton" parent="InvitationDialog/InvitationButttons"]
margin_left = 210.0
margin_right = 400.0
margin_bottom = 49.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="InvitationDialog/InvitationButttons/RejectInviteButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "reject"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InvitationText" type="Label" parent="InvitationDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -60.0
autowrap = true
[connection signal="pressed" from="MainContainer/InviteButton" to="." method="_on_InviteButton_pressed"]
[connection signal="pressed" from="InvitationDialog/InvitationButttons/AcceptInviteButton" to="." method="_on_AcceptInviteButton_pressed"]
[connection signal="pressed" from="InvitationDialog/InvitationButttons/RejectInviteButton" to="." method="_on_RejectInviteButton_pressed"]
